[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Interactables/Assets/Checkpoint.svg" type="Texture" id=1]
[ext_resource path="res://Assets/Interactables/Assets/CheckpointText.png" type="Texture" id=2]
[ext_resource path="res://Assets/Interactables/CheckPoint.gd" type="Script" id=3]
[ext_resource path="res://Assets/Interactables/Sounds/Checkpoint.wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=2]
resource_name = "Float_Idle"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CheckPointSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5, 5 ),
"transitions": PoolRealArray( -2, -2, -2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -20 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Triggered"

[sub_resource type="CircleShape2D" id=1]
radius = 110.073

[node name="CheckPoint" type="Position2D"]
self_modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 3 )

[node name="TextPos" type="Position2D" parent="."]
position = Vector2( 0, -50 )

[node name="TextSprite" type="Sprite" parent="TextPos"]
visible = false
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="CheckPointAnims" type="AnimationPlayer" parent="."]
anims/Float_Idle = SubResource( 2 )
anims/RESET = SubResource( 3 )
anims/Triggered = SubResource( 4 )

[node name="CheckPointSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="PlayerDetect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetect"]
shape = SubResource( 1 )

[node name="TriggerSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="PlayerDetect" to="." method="_on_PlayerDetect_body_entered"]
